@@ -59,6 +59,9 @@ Contributions:
 
     * Amitai Schlair -- NetBSD package.
 
+    * Michael Schler -- registration of, and secondary nameservice for
+      TMDA.NET.
+
     * Robin S. Socha -- lots of TMDA advocacy, particularly in the
       de.* newsgroups, and documentation (Gnus HOWTO).
 
