@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Jul 13 14:35:41 2002 -->
+<!-- Tue Jul 16 16:51:00 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -101,7 +101,7 @@ Support
 <A HREF="trouble.html">Troubleshooting</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<a href="http://software.libertine.org/tmda/faq.cgi" TARGET="Resource Window">FAQ</a>
+<a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="bugs.html">Bugs &amp; Patches</A>
@@ -138,7 +138,7 @@ Author
 <h3>TMDA Download</h3>
 
 <u>Latest Release:</u><br>
-Download the <a href="http://software.libertine.org/tmda/releases/" TARGET="Resource Window">
+Download the <a href="http://tmda.net/releases/" TARGET="Resource Window">
 latest release</a> as a gzipped tarball.
 <br><br>
 
@@ -184,7 +184,7 @@ TARGET="Resource Window">(mail/tmda)</a>
 </ul>
 
 <u>Old Releases:</u><br>
-<a href="http://software.libertine.org/tmda/releases/old/" TARGET="Resource Window">
+<a href="http://tmda.net/releases/old/" TARGET="Resource Window">
 Past releases</a> are available for download as well.<br><br>
 
 <u>Development Sources:</u><br>
@@ -197,7 +197,7 @@ tmda-cvs mailing list</a> to stay abreast of changes.<br><br>
 The TMDA development sources can be accessed via anonymous (pserver)
 CVS through module <b>tmda</b>.<br><br>
 
-<li><a href="http://software.libertine.org/tmda/snapshots/" TARGET="Resource Window">
+<li><a href="http://tmda.net/snapshots/" TARGET="Resource Window">
 Nightly Snapshots:</a><br> Snapshots of the current development sources are checked out from CVS
 and tarballed each morning at 05:00 UTC.<br><br>
 
