@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Jul 13 17:01:08 2002 -->
+<!-- Tue Jul 16 16:49:53 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -111,7 +111,7 @@ Support
 <A HREF="trouble.html">Troubleshooting</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<a href="http://software.libertine.org/tmda/faq.cgi" TARGET="Resource Window">FAQ</a>
+<a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="bugs.html">Bugs &amp; Patches</A>
