@@ -1,7 +1,7 @@
 <!-- -*- html -*- -->
 <h3>Support</h3>
 <li><a href="trouble.html">Troubleshooting</a>
-<li><a href="http://software.libertine.org/tmda/faq.cgi" TARGET="Resource Window">FAQ</a>
+<li><a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a>
 <li><a href="bugs.html">Bugs &amp; Patches</a>
 <li><a href="http://libertine.org/lists/listinfo/" TARGET="Resource Window">Mailing Lists</a>
 <li><a href="http://mla.libertine.org/" TARGET="Resource Window">List Archive</a> 
