@@ -1,3 +1,7 @@
+2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* download.ht: Update links for tmda.net.
+
 2002-07-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* resources.ht: Add AIMS.
