@@ -1,3 +1,7 @@
+2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Michael Schler.
+
 2002-07-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* TMDA 0.58 is released.
